# python_password_widget

./: Makefile  README.md  password.py  pyproject.toml  test_passwords.py
.github/workflows/: ci-check.yaml
